# http-serve-folder

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
