[package]
authors = ["Paul Hansen <mail@paul.rs>"]
name = "http-serve-folder"
version = "0.2.0"
edition = "2021"
keywords = ["server", "host", "cli", "files"]
categories = ["command-line-utilities", "web-programming::http-server"]
repository = "https://github.com/paul-hansen/http-serve-folder"
description = "A configurable HTTP server that hosts a folder. Suitable for local testing."
license = "MIT OR Apache-2.0"
exclude = [
    ".github/*",
]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
clap = {version = "4.4", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
